--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -3,14 +3,16 @@
 {% block title %}Home | {% endblock title %}
 
 {%  block content %}
-        <div class="main-content main-content-list container">
+
+{% include 'recipes/partials/messages.html' %}
+<div class="main-content main-content-list container">
           
-            {% for recipe in recipes  %}
-                {% include 'recipes/partials/recipe.html' %}
-            {% empty %}
-            <div class="center m-y">
-                <h1>No recipes found here</h1>
-            </div>
-            {% endfor %}
-        </div>
+    {% for recipe in recipes  %}
+        {% include 'recipes/partials/recipe.html' %}
+    {% empty %}
+    <div class="center m-y">
+        <h1>No recipes found here</h1>
+    </div>
+    {% endfor %}
+</div>
 {%  endblock content %}
