--- a/base_templates/global/partials/footer.html
+++ b/base_templates/global/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="main-footer">
     <div class="developer">
-      <a href="https://www.otaviomiranda.com.br/" target="_blank" rel="noreferrer noopener">By Marcelo Villela</a>
+      <a href="https://www.marcelokfws.online/" target="_blank" rel="noreferrer noopener">By Marcelo Villela</a>
     </div>
   
     <div class="powered">
