--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -5,10 +5,8 @@
   --color-primary-dark-hover: #212336;
   --color-primary-light: #d4ecfa;
   --color-primary-light-hover: #bdd8e7;
-
   --color-white: #fff;
   --color-black: #000;
-
   --color-dark-text: #444;
   --color-info-light: #cce5ff;
   --color-debug-light: #cce5ff;
@@ -16,14 +14,12 @@
   --color-alert-light: #fff3cd;
   --color-warning-light: #fff3cd;
   --color-error-light: #f8d7da;
-
   --color-info-dark: #4d86c4;
   --color-debug-dark: #4d86c4;
   --color-success-dark: #4a9c5d;
   --color-alert-dark: #927f40;
   --color-warning-dark: #927f40;
   --color-error-dark: #da525d;
-
   --color-gray-0: #f9f9f9;
   --color-gray-1: #e0e0e0;
   --color-gray-2: #c7c7c7;
@@ -34,31 +30,25 @@
   --color-gray-7: #4b4b4b;
   --color-gray-8: #323232;
   --color-gray-9: #191919;
-
   --font-primary: sans-serif;
   --font-headings: 'Roboto Slab', serif;
-
   --spacing-gutter-medium: 3rem;
   --spacing-gutter-large: 4rem;
 }
-
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
-
 html {
   font-size: 62.5%;
 }
-
 body {
   font-size: 1.6rem;
   font-family: var(--font-primary);
   background: var(--color-gray-1);
   color: var(--color-dark-text);
 }
-
 h1,
 h2,
 h3,
@@ -67,26 +57,21 @@ h5,
 h6 {
   font-family: var(--font-headings);
 }
-
 img {
-  width: 100%;
+  max-width: 100%;
 }
-
 a {
   color: var(--color-primary);
   text-decoration: none;
 }
-
 .container {
   max-width: 144rem;
   margin: 0 auto;
   padding: var(--spacing-gutter-medium);
 }
-
 .main-header-container {
   background: var(--color-primary-dark);
 }
-
 .main-logo {
   font-size: 4rem;
   color: var(--color-white);
@@ -98,11 +83,9 @@ a {
   width: fit-content;
   margin: 0 auto;
 }
-
 .main-logo-icon {
   margin-right: 2rem;
 }
-
 .search-form {
   border: 0.2rem solid var(--color-primary-dark);
   max-width: 64rem;
@@ -111,7 +94,6 @@ a {
   position: relative;
   transition: all 300ms ease-in-out;
 }
-
 .search-input,
 .search-button {
   border: none;
@@ -120,42 +102,34 @@ a {
   padding: 1rem;
   transition: all 300ms ease-in-out;
 }
-
 .search-input {
   width: 100%;
   padding-right: 3rem;
 }
-
 .search-button {
   position: absolute;
   top: 0;
   right: 0;
 }
-
 .search-button:focus {
   outline: 1px solid var(--color-primary);
   background: rgba(0, 0, 0, 0.05);
 }
-
 .search-form:focus-within {
   border-color: var(--color-primary);
   background: var(--color-white);
 }
-
 .search-form:focus-within .search-button {
   color: var(--color-primary);
 }
-
 .main-content {
   padding-top: 0;
 }
-
 .main-content-list {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
   gap: var(--spacing-gutter-large);
 }
-
 .recipe {
   background: var(--color-white);
   box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.2);
@@ -164,64 +138,52 @@ a {
   border-radius: 0.4rem;
   overflow: hidden;
 }
-
 .recipe img {
-  width: 100%;
+  max-width: 100%;
 }
-
 .recipe-list-item {
   max-width: 64rem;
   height: fit-content;
 }
-
 .recipe-list-item:hover {
   transform: scale(1.02);
   box-shadow: -8px 8px 18px rgba(0, 0, 0, 0.25);
 }
-
 .recipe-title-container {
   padding: var(--spacing-gutter-medium);
   padding-bottom: 2rem;
 }
-
 .recipe-title-container a {
   text-decoration: none;
   color: var(--color-primary-dark);
 }
-
 .recipe-author {
   padding: 0 var(--spacing-gutter-medium);
 }
-
 .recipe-content {
   padding: var(--spacing-gutter-medium);
   padding-top: 2rem;
 }
-
 .recipe-author-item {
   color: var(--color-gray-4);
   margin-right: 1rem;
   font-style: italic;
   font-size: 1.4rem;
 }
-
 .recipe-author a {
   color: var(--color-primary);
   transition: all 300ms ease-in-out;
   text-decoration: none;
 }
-
 .recipe-author a:hover {
   color: var(--color-primary-dark);
 }
-
 .recipe-meta-container {
   display: flex;
   flex-flow: row wrap;
   padding: var(--spacing-gutter-medium);
   background: var(--color-gray-1);
 }
-
 .recipe-meta {
   display: flex;
   flex-flow: column nowrap;
@@ -229,11 +191,9 @@ a {
   flex-grow: 1;
   text-align: center;
 }
-
 .recipe-meta-title {
   font-size: 1.6rem;
 }
-
 .recipe-footer a {
   background: var(--color-primary-dark);
   display: block;
@@ -243,25 +203,20 @@ a {
   padding: 1.5rem var(--spacing-gutter-medium);
   transition: all 300ms ease-in-out;
 }
-
 .recipe-footer a:hover {
   filter: brightness(2);
 }
-
 .main-content-detail .recipe-list-item {
   max-width: 84rem;
   margin: 0 auto;
 }
-
 .main-content-detail .recipe-list-item:hover {
   transform: scale(1);
   box-shadow: -5px 5px 15px rgba(0, 0, 0, 0.2);
 }
-
 .preparation-steps {
   padding: var(--spacing-gutter-medium);
 }
-
 .main-footer {
   display: flex;
   align-items: center;
@@ -270,17 +225,14 @@ a {
   color: var(--color-white);
   padding: var(--spacing-gutter-large);
 }
-
 .main-footer a {
   color: var(--color-white);
   text-decoration: none;
   transition: all 300ms ease-in-out;
 }
-
 .main-footer a:hover {
   filter: brightness(0.8);
 }
-
 .preparation-steps h1,
 .preparation-steps h2,
 .preparation-steps h3,
@@ -291,13 +243,11 @@ a {
 .preparation-steps pre {
   margin: 2rem 0;
 }
-
 .preparation-steps ol,
 .preparation-steps ul {
   margin: 2rem;
   padding: 0 2rem;
 }
-
 .pagination-content {
   display: flex;
   flex-flow: row wrap;
@@ -307,24 +257,20 @@ a {
   background: var(--color-gray-3);
   padding: 0.5rem 1rem;
 }
-
 .pagination .page-link {
   text-decoration: none;
   background: var(--color-primary);
   color: var(--color-white);
 }
-
 .pagination .page-current {
   background: var(--color-primary-dark);
 }
-
 /* Forms */
 .form-content {
   max-width: 64rem;
   margin: 0 auto;
   margin-bottom: var(--spacing-gutter-medium);
 }
-
 .form-content label,
 .form-content .help-text,
 .errorlist {
@@ -333,11 +279,9 @@ a {
   font-size: 1.4rem;
   list-style-type: none;
 }
-
 .errorlist {
   color: var(--color-error-dark);
 }
-
 .form-content input,
 .form-content textarea,
 .form-content select {
@@ -346,49 +290,37 @@ a {
   border-radius: 0.4rem;
   border: 1px solid var(--color-primary-dark);
 }
-
 .form-content-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   gap: calc(var(--spacing-gutter-medium) / 2) var(--spacing-gutter-medium);
 }
-
 .form-content button {
   padding: 1rem 2rem;
   border: none;
   background: var(--color-primary-dark);
   color: var(--color-white);
 }
-
 .inline-form {
   display: inline;
 }
-
 .span-2 {
   grid-column: span 2;
 }
-
 .plaintext-button {
-  display: grid;
+  display: inline;
   border: none;
   background: none;
   cursor: pointer;
   color: var(--color-primary);
   font-size: 1.6rem;
-  padding: 1rem 2rem;
-  border: none;
-  background: var(--color-primary-dark);
-  color: var(--color-white);
-  margin: auto;
 }
-
 /* Messages */
 .messages-container {
   display: flex;
   flex-flow: column nowrap;
   gap: calc(var(--spacing-gutter-medium) / 2);
 }
-
 .message {
   padding: 1rem;
   border-radius: 4px;
@@ -396,80 +328,65 @@ a {
   background: var(--color-gray-2);
   color: var(--color-dark-text);
 }
-
 .message-error {
   border: 1px solid var(--color-error-dark);
   background: var(--color-error-light);
   color: var(--color-error-dark);
 }
-
 .message-success {
   border: 1px solid var(--color-success-dark);
   background: var(--color-success-light);
   color: var(--color-success-dark);
 }
-
 .message-warning {
   border: 1px solid var(--color-warning-dark);
   background: var(--color-warning-light);
   color: var(--color-warning-dark);
 }
-
 .message-alert {
   border: 1px solid var(--color-alert-dark);
   background: var(--color-alert-light);
   color: var(--color-alert-dark);
 }
-
 .message-info {
   border: 1px solid var(--color-info-dark);
   background: var(--color-info-light);
   color: var(--color-info-dark);
 }
-
 .message-debug {
   border: 1px solid var(--color-debug-dark);
   background: var(--color-debug-light);
   color: var(--color-debug-dark);
 }
-
 /* Authors */
 .login-message {
   margin: 1rem 0;
 }
-
 .authors-dashboard-container {
   max-width: 64rem;
-  text-align: center;
+  text-align: left;
   padding: var(--spacing-gutter-medium);
   margin: 0 auto;
 }
-
 .authors-dashboard-container h3,
 .authors-dashboard-container p,
 .authors-dashboard-container ul {
   list-style-type: none;
   margin: 1rem 0;
 }
-
 /* Generics */
-
 .center {
   text-align: center;
 }
-
 .left {
   text-align: left;
 }
-
 .m-x {
   margin: 0 var(--spacing-gutter-medium);
 }
-
 .m-y {
   margin: var(--spacing-gutter-medium) 0;
 }
-
 .hidden-text {
   display: none;
 }
