--- a/base_templates/global/partials/menu.html
+++ b/base_templates/global/partials/menu.html
@@ -8,13 +8,16 @@
     <i class="fas fa-times-circle"></i>
     <span class="hidden-text">Close menu</span>
   </button>
+
   <div class="menu-content">
     <nav class="menu-nav">
       <a href="{% url 'recipes:home' %}">Home</a>
+
       {% if user.is_authenticated %}
         <a href="{% url 'authors:dashboard_recipe_new' %}">New recipe</a>
         <a href="{% url 'authors:dashboard' %}">Dashboard</a>
-        <a href="{% url 'authors:logout' %}">Logout</a>
+        <a class="authors-logout-link" href="{% url 'authors:logout' %}">Logout</a>
+        {% include 'authors/partials/form_logout.html' %}
       {% else %}
         <a href="{% url 'authors:login' %}">Login</a>
         <a href="{% url 'authors:register' %}">Register</a>
