--- a/authors/templates/authors/pages/login.html
+++ b/authors/templates/authors/pages/login.html
@@ -1,15 +1,27 @@
 {% extends 'global/base.html' %}
 
-{% block title %}Login | {% endblock title %}
+{% block title %}Login{% endblock %}
 
 {% block content %}
-  <div class="main-content center container">
-    <h2>Login</h2>
-    {% include 'authors/partials/login_message.html' %}
-  </div>
 
-  {% include 'global/partials/messages.html' %}
-  {% if not user.is_authenticated %}
-    {% include 'global/partials/form.html' %}
-  {% endif %} 
-{% endblock content %}
+<div class="col-md-4">
+    <form method="post">
+        {% csrf_token %}
+
+        <div class="mb-3">
+            <label class="form-label" for="id_username"> User:</label>
+            <input type="text" name="username" class="form-control">
+        </div>
+        
+        <div class="mb-3">
+            <label class="form-label" for="id_password"> Password:</label>
+            <input type="password" name="password" class="form-control">
+        </div>
+
+        <button class="btn btn-warning" type="submit"> Submit</button>
+    </form>
+    
+    <a href="{% url 'password_reset' %}"> Forgot your password ?</a>
+</div>
+
+{% endblock %}
