--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -52,7 +52,6 @@ body {
 h1,
 h2,
 h3,
-h4,
 h5,
 h6 {
   font-family: var(--font-headings);
@@ -139,7 +138,7 @@ a {
   overflow: hidden;
 }
 .recipe img {
-  max-width: 100%;
+  width: 100%;
 }
 .recipe-list-item {
   max-width: 64rem;
