--- a/base_templates/global/partials/form.html
+++ b/base_templates/global/partials/form.html
@@ -39,6 +39,7 @@
       {% endif %}
   
       <div class="form-content form-content-grid">
+        <a href="/">Forgot Password ?</a>
         <div class="form-group">
           <button type="submit">Send</button>
         </div>
